# dirigera-readaptive

./: .example.env  .gitignore  README.md  config.example.yaml  config.rpi.example.yaml  pyproject.toml
artifacts/ZdraveSvetlo/: SunriseSunset.vl
docs/: experiment-log.md  findings.md  raspberry-pi.md
schedules/: computed-dim.generated.yaml  computed.example.yaml  computed.generated.yaml
scripts/: capture-dirigera-events.ps1  capture_dirigera_events.py  pair-dirigera.ps1  pi-install-app.ps1  pi-install-status-scripts.ps1  pi-seed-token.ps1  smoke_once.py  start-event-logger.ps1  stop-event-logger.ps1
scripts/pi/: dirigera-logs  dirigera-run-schedule-update  dirigera-status
src/dirigera_readaptive/: __init__.py  cli.py  client.py  config.py  events.py  panel.css  panel.html  panel.js  panel.py  recovery.py  schedule_cli.py  schedule_profiles.py  schedule_profiles_cli.py  schedule_update.py  seasonal_cli.py  seasonal_schedule.py
systemd/: dirigera-computed-schedule.service  dirigera-computed-schedule.timer  dirigera-panel.service  dirigera-readaptive-journald.conf  dirigera-readaptive.service
tests/: test_capture_dirigera_events.py  test_cli.py  test_client.py  test_config.py  test_events.py  test_panel.py  test_recovery.py  test_schedule_cli.py  test_schedule_profiles.py  test_schedule_update.py  test_seasonal_schedule.py
